--- a/advanced/derived_2/CMakeLists.txt
+++ b/advanced/derived_2/CMakeLists.txt
@@ -6,9 +6,15 @@ target_include_directories(
     fdtpe_derived_2
     PUBLIC
     ${CMAKE_CURRENT_BINARY_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}
 )
 target_link_libraries(
     fdtpe_derived_2
     PUBLIC
     fdtpe_abstract_base
+)
+set_target_properties(
+    fdtpe_derived_2
+    PROPERTIES
+    POSITION_INDEPENDENT_CODE True
 )
