Add working version for derived_class_2.

--- a/advanced/bin/CMakeLists.txt
+++ b/advanced/bin/CMakeLists.txt
@@ -2,10 +2,6 @@ add_executable(
     advanced_example_fortran
     advanced_example.f90
 )
-add_executable(
-    advanced_example_c
-    advanced_example.c
-)
 target_link_libraries(
     advanced_example_fortran
     PUBLIC
@@ -13,8 +9,23 @@ target_link_libraries(
     fdtpe_derived_1
     fdtpe_derived_2
 )
+add_executable(
+    advanced_example_c
+    advanced_example.c
+)
 target_link_libraries(
     advanced_example_c
+    PUBLIC
+    fdtpe_abstract_base
+    fdtpe_derived_1
+    fdtpe_derived_2
+)
+add_executable(
+    advanced_example_cpp
+    advanced_example.cc
+)
+target_link_libraries(
+    advanced_example_cpp
     PUBLIC
     fdtpe_abstract_base
     fdtpe_derived_1
